# elecxterm

./: .gitignore  CLAUDE.md  README.md  build_fix.ps1  dev.ps1  elecxterm.code-workspace  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
public/: app-icon.af  elecxterm_repo_card.af
src/: App.tsx  ThemeContext.tsx  index.css  main.tsx  pty-bridge.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pty_manager.rs
src/components/: CommandPalette.tsx  NotificationOverlay.tsx  Prompt.tsx  SplitLayout.tsx  StatusBar.tsx  TabBar.tsx  TabContent.tsx  TerminalPane.tsx  TitleBar.tsx
src/hooks/: useKeybinds.ts  useLayout.ts  usePaneState.ts
src/services/: PaneStateStore.ts  terminalRegistry.ts
