[package]
name = "elecxterm"
version = "0.0.3"
description = "Next-generation terminal multiplexer for the elecxzy ecosystem"
authors = ["shinsaku"]
edition = "2021"

[lib]
name = "elecxterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
log = "0.4"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Desktop-specific dependencies can go here
